--- a/programs/social-game/Cargo.toml
+++ b/programs/social-game/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "social-game-sol"
+name = "suko-live"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "social_game_sol"
+name = "suko_live"
 
 [features]
 default = []
